--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body{
 }
 
 .main .child-2{
-    background-color: aqua;
+    background-color: white;
     width: 326px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
@@ -54,6 +54,14 @@ body{
     margin-left: 30px;
 }
 
+.ijm{
+    margin-left: 40px;
+    margin-top: 20px;
+}
+
+.ijm img{
+    margin-left: 10px;
+}
 
 .pricecontainer{
     display: flex;
